Fixed code wrapping

--- a/frontend/styles/_content.sass
+++ b/frontend/styles/_content.sass
@@ -86,6 +86,7 @@ body#home .content
       padding: 0.5rem 2.5rem 0.5rem 1rem;
       padding-right: 50px;
       top: 0px
+      white-space: inherit
       &:code:not(code[class*="language-"]) 
         white-space: nowrap
   a
